--- a/global-header.html
+++ b/global-header.html
@@ -109,9 +109,11 @@ Developer: Sergio Pacheco
                         <a class = "nav-link" href = "/Willows-Reef-Mock-Up"> Home </a>
                     </li>
                     <span class = "dropdown">
-                        <button class = "dropdown-toggle" type = "button" id = "productTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                            Products 
-                        </button>
+                        <span class = "dropdown-btn">
+                            <button class = "dropdown-toggle" type = "button" id = "productTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Products 
+                            </button>
+                        </span>
                         <ul class = "dropdown-menu" aria-labelledby = "productTab">
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/products-page.html"> Individual </a>
@@ -125,9 +127,11 @@ Developer: Sergio Pacheco
                         <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                     </li>
                     <span class = "dropdown">
-                        <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                            Media 
-                        </button>
+                        <span class = "dropdown-btn">
+                            <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Media 
+                            </button>
+                        </span>
                         <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html"> Blog </a>
