--- a/blog-placeholder.html
+++ b/blog-placeholder.html
@@ -51,7 +51,7 @@ Developer: Sergio Pacheco
             <!-- Overlay for Coming-soon Pop-Up -->
             <div id = "popupOverlay" class = "active">&nbsp;</div>
 
-            <div class = "coming-soon-pop" style = "position: fixed; z-index: 400; top: 0; bottom: 0; left: 0; right: 0; margin: auto; text-align: center; color: #fff; background-color: #03002e; border: .1rem solid #fff; padding: 2rem; width: 70%; max-width: 30rem; height: fit-content;">
+            <div class = "coming-soon-pop" style = "position: fixed; z-index: 400; top: 0; bottom: 0; left: 0; right: 0; margin: auto; text-align: center; color: #fff; background-color: #03002e; border: .1rem solid #fff; padding: 2rem; width: 70%; max-width: 30rem; height: fit-content;" data-aos = "zoom-in" data-aos-once = "true">
                 <div class = "section-header" style = "color: #fff; font-weight: bold;">
                     COMING SOON
                 </div>
@@ -60,7 +60,7 @@ Developer: Sergio Pacheco
                     insights on the aquarium hobby!
                 </div>
                 <div>
-                    <a href = "/Willows-Reef-Mock-Up/home.html" class = "link-button" style = "border: 0.1rem solid #fff; display: block;">
+                    <a href = "/Willows-Reef-Mock-Up/" class = "link-button" style = "border: 0.1rem solid #fff; display: block;">
                         Return to Home
                     </a>
                 </div>
@@ -71,7 +71,7 @@ Developer: Sergio Pacheco
                     <h2 class = "section-header">Blog Posts</h2>
                     
                     <div class = "row justify-content-center">
-                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4">
                             <div class = "wid-cont d-flex flex-column">
                                 <div class = "blog-post-img" id = "">
                                     <img alt = "placeholder" src = "images/jpg/blog-placeholder-1.jpg">
@@ -99,7 +99,7 @@ Developer: Sergio Pacheco
                                 </a>
                             </div>
                         </div>
-                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4">
                             <div class = "wid-cont d-flex flex-column">
                                 <div class = "blog-post-img" id = "">
                                     <img alt = "placeholder" src = "images/jpg/blog-placeholder-2.jpg">
@@ -127,7 +127,7 @@ Developer: Sergio Pacheco
                                 </a>
                             </div>
                         </div>
-                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4" data-aos = "zoom-in" data-aos-once = "true">
+                        <div class = "blog-post-container col-lg-4 col-md-6 d-flex flex-column mt-4">
                             <div class = "wid-cont d-flex flex-column">
                                 <div class = "blog-post-img" id = "rhodoFeast">
                                     <img alt = "placeholder" src = "images/jpg/blog-placeholder-3.jpg">
