--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -55,7 +55,7 @@ Developer: Sergio Pacheco
                     USA
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem; background: #1e4772; border-radius: 5rem;">
@@ -103,7 +103,7 @@ Developer: Sergio Pacheco
                             </ul>
                         </span>
                     </div>
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "gsTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Gulfstream Tropical Aquarium" src = "images/png/store-logos/wholesale-logos/gulfstream-tropical-logo.png" style = "max-width: 8rem; background: #000; border-radius: 1rem;">
@@ -151,7 +151,7 @@ Developer: Sergio Pacheco
                             </ul>
                         </span>
                     </div>
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "vaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
@@ -206,7 +206,7 @@ Developer: Sergio Pacheco
                     India
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "daTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Digitech Aquariums" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
@@ -261,7 +261,7 @@ Developer: Sergio Pacheco
                     Puerto Rico
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "hfTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
@@ -306,7 +306,7 @@ Developer: Sergio Pacheco
                     Bangladesh
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-3 text-center">
+                    <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "saTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
