--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -62,7 +62,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "asTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
@@ -110,7 +110,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "gsTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
@@ -158,7 +158,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "vaTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
@@ -213,7 +213,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "daTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
@@ -268,7 +268,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "hfTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
@@ -313,7 +313,7 @@ Developer: Sergio Pacheco
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "saTab">
                                 <span class = "close-btn">
-                                    <i class="fas fa-times"></i>
+                                    <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
