--- a/feeding-vids-placeholder.html
+++ b/feeding-vids-placeholder.html
@@ -51,16 +51,16 @@ Developer: Sergio Pacheco
             <!-- Overlay for Coming-soon Pop-Up -->
             <div id = "popupOverlay" class = "active">&nbsp;</div>
 
-            <div class = "coming-soon-pop" style = "position: fixed; z-index: 400; top: 0; bottom: 0; left: 0; right: 0; margin: auto; text-align: center; color: #fff; background-color: #03002e; border: .1rem solid #fff; padding: 2rem; width: 70%; max-width: 30rem; height: fit-content;" data-aos = "zoom-in" data-aos-once = "true">
-                <div class = "section-header" style = "color: #fff; font-weight: bold;">
+            <div class = "coming-soon-pop" data-aos = "zoom-in" data-aos-once = "true">
+                <div class = "section-header">
                     COMING SOON
                 </div>
-                <div style = "margin-bottom: 2rem;">
+                <div class = "pop-blurb">
                     Stay tuned for our upcoming Feeding Video Player that will share a playlist of
                     videos that provide helpful feeding tips and guides.
                 </div>
                 <div>
-                    <a href = "/Willows-Reef-Mock-Up/" class = "link-button" style = "border: 0.1rem solid #fff; display: block;">
+                    <a href = "/Willows-Reef-Mock-Up/" class = "link-button">
                         Return to Home
                     </a>
                 </div>
