--- a/global-header.html
+++ b/global-header.html
@@ -18,6 +18,27 @@ Developer: Sergio Pacheco
 </script>
 <!-- Site Header -->
 <header>
+    <!-- Temporary Announcement Banner -->
+    <style>
+        #announcementBanner
+        {
+            position: fixed;
+            top: 0;
+            z-index: 400;
+            height: 3rem;
+            width: 100%;
+            background: #010048;
+            color: #fff;
+        }
+        header{ top: 3rem; }
+        #pageContent{ top: 8rem; }
+    </style>
+    <div id = "announcementBanner" class = "d-flex justify-content-center align-items-center">
+        Check our our new Non-Profit 
+        <a href = "https://willowsfoundation.com/" target = "blank" rel = "norferrer noopener">Willow's Foundation</a>
+    </div>
+
+
     <!-- Header Navigation -->
     <nav class = "navbar navbar-expand-lg">
         <div class = "container-fluid">
