--- a/global-header.html
+++ b/global-header.html
@@ -27,15 +27,14 @@ Developer: Sergio Pacheco
             z-index: 400;
             height: 3rem;
             width: 100%;
-            background: #010048;
+            background: #07c2f9;
             color: #fff;
         }
         header{ top: 3rem; }
-        #pageContent{ top: 8rem; }
     </style>
     <div id = "announcementBanner" class = "d-flex justify-content-center align-items-center">
         Check our our new Non-Profit 
-        <a href = "https://willowsfoundation.com/" target = "blank" rel = "norferrer noopener">Willow's Foundation</a>
+        <a href = "https://willowsfoundation.com/" target = "blank" rel = "norferrer noopener"> Willow's Foundation</a>
     </div>
 
 
