--- a/about-page.html
+++ b/about-page.html
@@ -79,8 +79,30 @@ Developer: Sergio Pacheco
                         in bulk for your store location.
                     </div>
                 </div>
+                <!-- Willow's Foundation Section - START -->
+                <div id = "foundationSection" class = "container-fluid">
+                    <div class = "row">
+                        <div class = "content-2 col-lg-6">
+                            <!--<img alt = "Willow's Foundation" src = "images/jpg/willows-foundation.jpg">-->
+                        </div>
+                        <div class = "content-1 col-lg-6">
+                            <h2 class = "section-header">Willow's Foundation</h2>
+                            Our new Non-Profit Organization is here!<br>
+                            <b>Willow's Foundation</b> is looking to inspire the next generation of Marine Aquarists!<br>
+                            Interested in becoming a part of our movement to make this wonderful hobby more accessible to students?
+                            <br>
+                            Follow us on our <a class = "text-decoration-none fw-bold" target = "_blank" href = "https://www.facebook.com/WillowsFoundation/" rel = "noopener norferrer"><i class="fab fa-facebook"></i> Facebook page</a>, and be sure to check us out on the
+                            <a href = "https://willowsfoundation.com/" target = "_blank" rel = "norferrer noopener" class = "text-decoration-none fw-bold">Willow's Foundation website</a>!<br>
+                            
+                            <a href = "https://www.ecomagazine.com/in-depth/featured-stories/inspiring-a-sustainable-movement-in-marine-aquarium-hobbyists?fbclid=IwAR1Yvze655oj9K8FfLLfHWmHP-dLiBuHA4lyP8qMrzCmdQe-c6k_Z_lCCtk" target = "_blank" rel = "norferrer noopener" class = "link-button">
+                                eco magazine article
+                            </a>
+                        
+                        </div>
+                    </div>
+                </div>
+                <!-- Willow's Foundation Section - END -->
             </div>
-
         </div>
 
         <!-- Global Footer Section populated by JS -->
