--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Developer: Sergio Pacheco
             <!-- Welcome Section - END -->
 
             <!-- Willow's Foundation Section - START -->
-            <div id = "foundationSection" class = "container-fluid">
+            <div id = "foundationSection" class = "container-fluid" data-aos = "flip-right" data-aos-once = "true">
                 <div class = "row">
                     <div class = "content-2 col-lg-6">
                         <!--<img alt = "Willow's Foundation" src = "images/jpg/willows-foundation.jpg">-->
@@ -92,7 +92,7 @@ Developer: Sergio Pacheco
             <!-- Willow's Foundation Section - END -->
 
             <!-- Community Image Section - START -->
-            <div id = "customerSection" class = "container-fluid">
+            <div id = "customerSection" class = "container-fluid" data-aos = "flip-left" data-aos-once = "true">
                 <div class = "row">
                     <div class = "content-1 col-lg-6">
                         <h2 class = "section-header">Community Images</h2>
