--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@ Developer: Sergio Pacheco
                     </h1>
 
                     <div class = "section-content">
-                        We are an interconnected group of aquarium hobbyists looking <br class = "desktop-only">
-                        to grow the hobby and to provide top-quality products to people like us!
+                        We are an aquarium product company that specializes in premium, all-natural products.<br class = "desktop-only"> 
+                        One of our key features is that we avoid using any fillers and we list<br class = "desktop-only"> 
+                        ALL of our ingredients on each product we produce.
                     </div>
 
                     <a href = "/Willows-Reef-Mock-Up/about-page.html" class = "link-button">
