--- a/frozen-feast.html
+++ b/frozen-feast.html
@@ -104,10 +104,10 @@ Developer: Sergio Pacheco
 
                 <!-- Product Overview - START -->
                 <div class = "row justify-content-center product-descript-container">
-                    <div class = "frozen-feast-col col-lg-6">
+                    <div class = "frozen-feast-col col-md-6">
                         &nbsp;                        
                     </div>
-                    <div class = "col-lg-6 item-descript">
+                    <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">FrozenFeast</h2>
                         Now taking wholesale orders for our all new <b>FrozenFeast</b>. Please ask your LFS to reach out to us or send us an email at 
                         <a href = "mailto:info@willowsreef.com?subject=Frozenfreast%20Pre%20Order" target = "_blank">info@willowsreef.com</a>. 
