--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Developer: Sergio Pacheco
             <!-- Community Image Section - START -->
             <div id = "customerSection" class = "container-fluid">
                 <div class = "row">
-                    <div class = "content-1 col-lg-6">
+                    <div class = "content-1 col-lg-6 order-2 order-lg-1">
                         <h2 class = "section-header">Community Images</h2>
                         We love when customers submit their images.<br>
                         Send us your tank pictures and get featured on our website!<br>
@@ -116,7 +116,7 @@ Developer: Sergio Pacheco
                             View More
                         </a>
                     </div>
-                    <div class = "content-2 col-lg-6">
+                    <div class = "content-2 col-lg-6 order-1 order-lg-2">
                         <div id = "customerCarousel" class = "carousel slide" data-bs-ride = "carousel">
                             <ol class = "carousel-indicators">
                                 <button data-bs-target = "#customerCarousel" data-bs-slide-to = "0" class = "active"></button>
