--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Developer: Sergio Pacheco
                             </a>
                         </div>
                     </div>
-                    <div class = "product-container col-lg-4 col-md-6 d-flex flex-column invisible mt-4" data-aos = "flip-right" data-aos-once = "true">
+                    <div class = "product-container col-lg-4 col-md-6 flex-column invisible mt-4 desktop-only" data-aos = "flip-right" data-aos-once = "true">
                         <div class = "wid-cont">
                             &nbsp;
                         </div>
