--- a/community-images.html
+++ b/community-images.html
@@ -37,6 +37,16 @@ Developer: Sergio Pacheco
     </head>
 
     <body>
+        <!-- Community Images Specific Styling -->
+        <style>
+            small{ display: none; }
+            .pswp__caption__center
+            {
+                max-width: 800px;
+                font-size: 1rem;
+            }
+        </style>
+
         <button onclick = "topFunction()" id = "scrollToTopBtn">
             <i class = "fas fa-chevron-up"></i>
             <span class = "sr-only">Back to Top</span>
