--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -50,11 +50,11 @@ Developer: Sergio Pacheco
 
             <div id = "wholesaleSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Wholesale Sellers</h2>
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid;">
-                    <span><img alt = "US Flag" src = "images/svg/united-states-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
+                <div class = "location-divider">
+                    <span><img alt = "US Flag" src = "images/svg/united-states-flag.svg" class = "location-flag"></span>
                     USA
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
+                <div class = "row justify-content-center align-items-center" class = "store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -65,7 +65,7 @@ Developer: Sergio Pacheco
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fas fa-globe"></i><br>
                                         <a href = "https://www.aquariumspecialty.com/shop-by-brand/willows-reef.html" target = "_blank" rel = "noopener norferrer" class = "website-link">www.aquariumspecialty.com</a>
@@ -113,7 +113,7 @@ Developer: Sergio Pacheco
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fas fa-globe"></i><br>
                                         <a href = "https://gulfstreamtropicalaquarium.com/brand/willows-reef/" target = "_blank" rel = "noopener norferrer" class = "website-link">www.gulfstreamtropicalaquarium.com</a>
@@ -154,14 +154,14 @@ Developer: Sergio Pacheco
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "vaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
+                                <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "vaTab">
                                 <span class = "close-btn">
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fas fa-globe"></i><br>
                                         <a href = "https://www.vascaaquariumsupply.com/" target = "_blank" rel = "noopener norferrer" class = "website-link">www.vascaaquariumsupply.com</a>
@@ -201,22 +201,22 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
-                    <span><img alt = "India Flag" src = "images/svg/india-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
+                <div class = "location-divider">
+                    <span><img alt = "India Flag" src = "images/svg/india-flag.svg" class = "location-flag"></span>
                     India
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
+                <div class = "row justify-content-center align-items-center" class = "store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "daTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                <img alt = "Digitech Aquariums" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
+                                <img alt = "Digitech Aquariums" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "daTab">
                                 <span class = "close-btn">
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fas fa-globe"></i><br>
                                         <a href = "https://digitechaquariums.com/brand/willows-reef/" target = "_blank" rel = "noopener norferrer" class = "website-link">www.digitechaquariums.com</a>
@@ -256,11 +256,11 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
-                    <span><img alt = "Puerto Rico Flag" src = "images/svg/puerto-rico-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
+                <div class = "location-divider">
+                    <span><img alt = "Puerto Rico Flag" src = "images/svg/puerto-rico-flag.svg" class = "location-flag"></span>
                     Puerto Rico
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
+                <div class = "row justify-content-center align-items-center" class = "store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "hfTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -271,7 +271,7 @@ Developer: Sergio Pacheco
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fas fa-globe"></i><br>
                                         <a href = "https://www.happyfishfoodpr.com/" target = "_blank" rel = "noopener norferrer" class = "website-link">www.happyfishfoodpr.com</a>
@@ -301,11 +301,11 @@ Developer: Sergio Pacheco
                     </div>
                 </div>
 
-                <div style = "font-weight: bold; text-align: center; margin-top: 3rem; font-size: 1.5rem; border-bottom: 0.1rem solid; text-transform: uppercase;">
-                    <span><img alt = "Bangladesh Flag" src = "images/svg/bangladesh-flag.svg" style = "max-width: 1.5rem; position: relative; top: -0.1rem;"></span>
+                <div class = "location-divider">
+                    <span><img alt = "Bangladesh Flag" src = "images/svg/bangladesh-flag.svg" class = "location-flag"></span>
                     Bangladesh
                 </div>
-                <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
+                <div class = "row justify-content-center align-items-center" class = "store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "saTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -316,7 +316,7 @@ Developer: Sergio Pacheco
                                     <i class="far fa-times-circle"></i>
                                 </span>
                                 <span class = "dropdown-header">Store Information</span>
-                                <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
+                                <div class = "store-details">
                                     <div>
                                         <i class="fab fa-facebook"></i><br>
                                         <a href = "https://www.facebook.com/SHOPR-Aquatics-293463184855064/" target = "_blank" rel = "noopener norferrer" class = "website-link">SHOPR Aquatics</a>
@@ -360,7 +360,6 @@ Developer: Sergio Pacheco
 
         <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
-
     </body>
 
     <!-- Custom Site JS -->
