--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -54,7 +54,7 @@ Developer: Sergio Pacheco
                     <span><img alt = "US Flag" src = "images/svg/united-states-flag.svg" class = "location-flag"></span>
                     USA
                 </div>
-                <div class = "row justify-content-center align-items-center" class = "store-row">
+                <div class = "row justify-content-center align-items-center store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -205,7 +205,7 @@ Developer: Sergio Pacheco
                     <span><img alt = "India Flag" src = "images/svg/india-flag.svg" class = "location-flag"></span>
                     India
                 </div>
-                <div class = "row justify-content-center align-items-center" class = "store-row">
+                <div class = "row justify-content-center align-items-center store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "daTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -260,7 +260,7 @@ Developer: Sergio Pacheco
                     <span><img alt = "Puerto Rico Flag" src = "images/svg/puerto-rico-flag.svg" class = "location-flag"></span>
                     Puerto Rico
                 </div>
-                <div class = "row justify-content-center align-items-center" class = "store-row">
+                <div class = "row justify-content-center align-items-center store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "hfTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
@@ -305,7 +305,7 @@ Developer: Sergio Pacheco
                     <span><img alt = "Bangladesh Flag" src = "images/svg/bangladesh-flag.svg" class = "location-flag"></span>
                     Bangladesh
                 </div>
-                <div class = "row justify-content-center align-items-center" class = "store-row">
+                <div class = "row justify-content-center align-items-center store-row">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "saTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
